--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,7 +54,7 @@
       <div class="footer__brand">
         <div>
           <p class="value">Ristorante Monumento dal 1884</p>
-          <p class="muted">A pochi passi dal Borgo di Ostia Antica, Roma</p>
+          <p class="muted">Piazza Umberto I, 8, 00119 Roma RM</p>
         </div>
       </div>
       <div class="footer__links">
@@ -62,11 +62,23 @@
         <a href="/cookie-policy">Cookie Policy</a>
       </div>
       <div class="footer__contacts">
-        <a href="tel:3338024769">333 802 4769</a>
-        <a href="mailto:allosbarcodienea@hotmail.it">allosbarcodienea&#64;hotmail.it</a>
-        <a href="https://www.facebook.com/allosbarcodienea" target="_blank" rel="noopener" class="footer__social">
+        <a href="tel:3338024769">+39 06 5650021</a>
+        <a href="mailto:allosbarcodienea@hotmail.it">almonumento&#64;outlook.it</a>
+        <a href="https://www.facebook.com/share/17grj1iUEb/?mibextid=wwXIfr" target="_blank" rel="noopener" class="footer__social footer__social--facebook" aria-label="Facebook">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
             <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+          </svg>
+        </a>
+        <a href="https://www.instagram.com/ilmonumentodal1884/" target="_blank" rel="noopener" class="footer__social footer__social--instagram" aria-label="Instagram">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M7 3h10a4 4 0 0 1 4 4v10a4 4 0 0 1-4 4H7a4 4 0 0 1-4-4V7a4 4 0 0 1 4-4zm0 1.5A2.5 2.5 0 0 0 4.5 7v10A2.5 2.5 0 0 0 7 19.5h10a2.5 2.5 0 0 0 2.5-2.5V7A2.5 2.5 0 0 0 17 4.5H7z"/>
+            <path d="M12 8.25A3.75 3.75 0 1 1 8.25 12 3.75 3.75 0 0 1 12 8.25Zm0 1.5A2.25 2.25 0 1 0 14.25 12 2.25 2.25 0 0 0 12 9.75Z"/>
+            <circle cx="17.25" cy="6.75" r="1.05"/>
+          </svg>
+        </a>
+        <a href="https://api.whatsapp.com/send/?phone=%2B393888268533&text&type=phone_number&app_absent=0" target="_blank" rel="noopener" class="footer__social footer__social--whatsapp" aria-label="WhatsApp">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M12.04 2C6.55 2 2 6.2 2 11.14c0 1.77.47 3.45 1.37 4.96L2 22l6.06-1.95a10.6 10.6 0 0 0 3.98.77c5.49 0 10.04-4.2 10.04-9.14C22.08 6.2 17.53 2 12.04 2Zm-.04 17.26c-1.3 0-2.58-.31-3.71-.9l-.27-.14-3.6 1.16 1.17-3.4-.18-.28a7.57 7.57 0 0 1-1.16-4.02c0-4.08 3.43-7.4 7.62-7.4 4.2 0 7.62 3.32 7.62 7.4 0 4.08-3.42 7.4-7.6 7.4Zm4.18-5.55c-.23-.12-1.36-.67-1.57-.74-.21-.08-.36-.12-.51.12-.15.23-.59.74-.73.9-.13.15-.27.17-.5.06-.23-.12-.96-.35-1.83-1.11-.68-.57-1.14-1.27-1.27-1.48-.13-.22-.01-.33.11-.45.12-.12.23-.26.34-.38.11-.13.15-.22.23-.37.08-.15.04-.28-.02-.4-.06-.12-.51-1.2-.7-1.64-.18-.44-.37-.37-.51-.38l-.44-.01c-.15 0-.4.06-.61.28-.21.22-.8.78-.8 1.9s.82 2.21.93 2.37c.12.16 1.6 2.55 3.87 3.47.54.24.96.38 1.29.48.54.17 1.04.15 1.44.09.44-.07 1.36-.55 1.55-1.08.19-.53.19-.99.14-1.08-.04-.09-.21-.15-.44-.26Z"/>
           </svg>
         </a>
       </div>
