--- a/src/app/pages/contatti/contatti-page.component.html
+++ b/src/app/pages/contatti/contatti-page.component.html
@@ -4,18 +4,43 @@
       <p class="eyebrow">Contatti</p>
       <h1>Ristorante Monumento dal 1884</h1>
       <p class="lead">
-        Viale dei Romagnoli, 675 - Borgo di Ostia Antica (Roma)<br />
-        Tel. 3338024769 - Email: allosbarcodienea&#64;hotmail.it
+          Piazza Umberto I, 8, 00119 Roma RM<br />
+        Tel. +39 06 5650021 - Email: almonumento&#64;outlook.it
       </p>
       <div class="hero__actions">
-        <a class="btn primary" href="tel:3338024769">Chiama</a>
-        <a class="btn ghost" href="mailto:allosbarcodienea&#64;hotmail.it">Scrivi</a>
+        <a class="btn primary" href="tel:+39 06 5650021">Chiama</a>
+        <a class="btn ghost" href="mailto:almonumento@outlook.it">Scrivi</a>
+      </div>
+      <div class="contact-social">
+        <p class="contact-social__title">Seguici o scrivici</p>
+        <div class="contact-social__links">
+          <a class="contact-social__link contact-social__link--facebook" href="https://www.facebook.com/share/17grj1iUEb/?mibextid=wwXIfr" target="_blank" rel="noopener">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+              <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+            </svg>
+            <span>Facebook</span>
+          </a>
+          <a class="contact-social__link contact-social__link--instagram" href="https://www.instagram.com/ilmonumentodal1884/" target="_blank" rel="noopener">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+              <path d="M7 3h10a4 4 0 0 1 4 4v10a4 4 0 0 1-4 4H7a4 4 0 0 1-4-4V7a4 4 0 0 1 4-4zm0 1.5A2.5 2.5 0 0 0 4.5 7v10A2.5 2.5 0 0 0 7 19.5h10a2.5 2.5 0 0 0 2.5-2.5V7A2.5 2.5 0 0 0 17 4.5H7z"/>
+              <path d="M12 8.25A3.75 3.75 0 1 1 8.25 12 3.75 3.75 0 0 1 12 8.25Zm0 1.5A2.25 2.25 0 1 0 14.25 12 2.25 2.25 0 0 0 12 9.75Z"/>
+              <circle cx="17.25" cy="6.75" r="1.05"/>
+            </svg>
+            <span>Instagram</span>
+          </a>
+          <a class="contact-social__link contact-social__link--whatsapp" href="https://api.whatsapp.com/send/?phone=%2B393888268533&text&type=phone_number&app_absent=0" target="_blank" rel="noopener">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+              <path d="M12.04 2C6.55 2 2 6.2 2 11.14c0 1.77.47 3.45 1.37 4.96L2 22l6.06-1.95a10.6 10.6 0 0 0 3.98.77c5.49 0 10.04-4.2 10.04-9.14C22.08 6.2 17.53 2 12.04 2Zm-.04 17.26c-1.3 0-2.58-.31-3.71-.9l-.27-.14-3.6 1.16 1.17-3.4-.18-.28a7.57 7.57 0 0 1-1.16-4.02c0-4.08 3.43-7.4 7.62-7.4 4.2 0 7.62 3.32 7.62 7.4 0 4.08-3.42 7.4-7.6 7.4Zm4.18-5.55c-.23-.12-1.36-.67-1.57-.74-.21-.08-.36-.12-.51.12-.15.23-.59.74-.73.9-.13.15-.27.17-.5.06-.23-.12-.96-.35-1.83-1.11-.68-.57-1.14-1.27-1.27-1.48-.13-.22-.01-.33.11-.45.12-.12.23-.26.34-.38.11-.13.15-.22.23-.37.08-.15.04-.28-.02-.4-.06-.12-.51-1.2-.7-1.64-.18-.44-.37-.37-.51-.38l-.44-.01c-.15 0-.4.06-.61.28-.21.22-.8.78-.8 1.9s.82 2.21.93 2.37c.12.16 1.6 2.55 3.87 3.47.54.24.96.38 1.29.48.54.17 1.04.15 1.44.09.44-.07 1.36-.55 1.55-1.08.19-.53.19-.99.14-1.08-.04-.09-.21-.15-.44-.26Z"/>
+            </svg>
+            <span>WhatsApp</span>
+          </a>
+        </div>
       </div>
     </div>
       <div class="location__panel card">
           <div class="map-container">
               <iframe
-                      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2974.3989751445686!2d12.288944776541284!3d41.75394067124288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13258bdf5f5e5e5f%3A0x5e5e5e5e5e5e5e5e!2sViale%20dei%20Romagnoli%2C%20675%2C%2000119%20Roma%20RM!5e0!3m2!1sit!2sit!4v1234567890123!5m2!1sit!2sit"
+                      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d235.3048337842439!2d12.302273492494647!3d41.7601187104413!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1325f1b295518899%3A0xee488f05b65ec4ec!2sRistorante%20Monumento%20dal%201884!5e1!3m2!1sit!2sit!4v1766009319410!5m2!1sit!2sit"
                       width="100%"
                       height="300"
                       style="border:0; border-radius: 12px;"
@@ -27,7 +52,7 @@
           <div class="location__details">
               <div>
                   <p class="label">Indirizzo</p>
-                  <p class="value">Viale dei Romagnoli, 675 - Borgo di Ostia Antica, Roma</p>
+                  <p class="value">Piazza Umberto I, 8, 00119 Roma RM</p>
               </div>
           </div>
       </div>
@@ -42,24 +67,10 @@
     </div>
     <div class="schedule__grid">
       <div class="schedule__item">
-        <div class="schedule__day">Lunedì - Giovedì</div>
+        <div class="schedule__day">Lunedì - Venerdi</div>
         <div class="schedule__times">
           <div class="schedule__time">
-            <span>Pranzo: 12:00 - 15:00</span>
-          </div>
-          <div class="schedule__time">
-            <span>Cena: 19:00 - 23:00</span>
-          </div>
-        </div>
-      </div>
-      <div class="schedule__item">
-        <div class="schedule__day">Venerdì</div>
-        <div class="schedule__times">
-          <div class="schedule__time">
-            <span>Pranzo: 12:00 - 15:00</span>
-          </div>
-          <div class="schedule__time">
-            <span>Cena: 19:00 - 23:30</span>
+            <span>Pranzo/Cena: 11:30 - 23:00</span>
           </div>
         </div>
       </div>
@@ -67,10 +78,7 @@
         <div class="schedule__day">Sabato</div>
         <div class="schedule__times">
           <div class="schedule__time">
-            <span>Pranzo: 12:00 - 15:30</span>
-          </div>
-          <div class="schedule__time">
-            <span>Cena: 19:00 - 23:30</span>
+            <span>Pranzo/Cena: 11:30 - 23:00</span>
           </div>
         </div>
       </div>
@@ -78,10 +86,7 @@
         <div class="schedule__day">Domenica</div>
         <div class="schedule__times">
           <div class="schedule__time">
-            <span>Pranzo: 12:00 - 15:30</span>
-          </div>
-          <div class="schedule__time">
-            <span>Cena: 19:00 - 23:00</span>
+            <span>Pranzo/Cena: 11:30 - 23:00</span>
           </div>
         </div>
       </div>
